[package]
edition = "2021"
name = "punchy"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.58"
bevy = "0.7.0"
bevy-parallax = "0.1.2"
bevy_egui = "0.14"
bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
iyes_loopless = "0.6.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
thiserror = "1.0.31"
structopt = "0.3.26"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
networking = { version = "0.5.6", registry = "hqg-shared" }

bevy_mod_debugdump = { version = "0.4", optional = true }
bevy-inspector-egui = { version = "0.11", optional = true }
bevy-inspector-egui-rapier = { version = "0.4", optional = true, features = ["rapier2d"] }
leafwing_input_manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev = "e8bd6e0" }
unic-langid = "0.9.0"
bevy_fluent = { git = "https://github.com/kgv/bevy_fluent", rev = "d41f514" }
sys-locale = "0.2.1"
fluent = "0.16.0"
winit = "0.26.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.18.2", features = ["rt", "macros", "net"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["Window"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.31"
js-sys = "0.3.45"
console_error_panic_hook = "0.1.5"
wasm-logger = "0.2.0"
log = "0.4.6"

[features]
default = []
debug = ["bevy-inspector-egui", "bevy-inspector-egui-rapier"]
schedule_graph = ["bevy_mod_debugdump"]

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1 # Improves physics performance for release builds

[patch.crates-io]
# Patch to enable improved DPad support. It's a merge of the following PR to Bevy 0.7.0 so we can
# use it before 0.8 is release: https://github.com/bevyengine/bevy/pull/5220.
bevy_gilrs = { git = "https://github.com/zicklag/bevy.git", branch = "v0.7.0-dpad-patch" }
